# ultrafastgoertzel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/ultrafastgoertzel/: __init__.py  _ultrafastgoertzel.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test.py
crates/ultrafastgoertzel/: Cargo.toml
crates/ultrafastgoertzel/benches/: goertzel_bench.rs
crates/ultrafastgoertzel/src/: lib.rs
