[package]
name = "ultrafastgoertzel-py"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
publish = false

[dependencies]
ultrafastgoertzel = { path = "../../crates/ultrafastgoertzel" }
pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py38"] }
numpy = "0.23"
