[package]
name = "ultrafastgoertzel-py"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
publish = false

[dependencies]
ultrafastgoertzel = { path = "../../crates/ultrafastgoertzel" }
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py39"] }
numpy = "0.24"
