[package]
name = "ultrafastgoertzel"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
publish = true

[dependencies]
pulp = { version = "0.21.5", features = ["macro"] }


[dev-dependencies]
rand = "0.9.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "goertzel_bench"
harness = false
